fixed navbar from overlapping page in mobile

--- a/css/index.css
+++ b/css/index.css
@@ -203,7 +203,6 @@ p {
   opacity: 0;
   display: none;
   flex-direction: column;
-  justify-content: center;
   height: 100vh;
 }
 .main-header .navbar ul {
