--- a/less/header.less
+++ b/less/header.less
@@ -48,7 +48,6 @@
     opacity: 0;
     display: none;
     flex-direction: column;
-    justify-content: center;
     height: 100vh;
 
     ul {
